# screenchat2.0

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/specs/bubble-notification/: spec.md
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/specs/capture-loop/: spec.md
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/specs/conversation-persistence/: spec.md
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/specs/goal-coaching/: spec.md
openspec/changes/archive/2026-05-08-add-goal-coaching-mode/specs/tray-icon/: spec.md
openspec/specs/agent-memory/: spec.md
openspec/specs/bubble-notification/: spec.md
openspec/specs/capture-loop/: spec.md
openspec/specs/conversation-persistence/: spec.md
openspec/specs/goal-coaching/: spec.md
openspec/specs/history-ui/: spec.md
openspec/specs/settings-ui/: spec.md
openspec/specs/tray-icon/: spec.md
openspec/specs/user-chat/: spec.md
src/screenchat/: __main__.py  coaching.py  config.py  loop.py
src/screenchat/memory/: database.py  models.py
src/screenchat/tray/: icon.py
src/screenchat/ui/: chat_window.py  coaching_window.py  focus_dashboard.py  history_window.py  settings_window.py
tests/: test_coaching.py  test_database.py  test_focus_dashboard.py  test_loop.py  test_tray.py
