[project]
name = "screenchat"
version = "0.1.0"
description = "Desktop AI companion — watches your screen and chats with you"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mss>=9.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rumps>=0.4.0",
    "imagehash>=4.3",
]

[project.scripts]
screenchat = "screenchat.loop:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
