[project]
name = "screenchat"
version = "0.1.0"
description = "macOS AI focus coach with screen-aware reminders and a 3D focus galaxy"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mss>=9.0",
    "Pillow>=10.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rumps>=0.4.0",
    "imagehash>=4.3",
    "customtkinter>=5.2",
]

[project.scripts]
screenchat = "screenchat.loop:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
